@@ -10,9 +10,6 @@
 <script src="../jquery.validate.js" type="text/javascript"></script>
 <script src="../lib/jquery.metadata.js" type="text/javascript"></script>
 
-<!-- for styling the form -->
-<script src="js/cmxforms.js" type="text/javascript"></script>
-
 <script type="text/javascript">
 $(document).ready(function() {
 	$("#commentForm").validate({meta: "validate"});
