@@ -10,7 +10,6 @@
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../jquery.validate.js" type="text/javascript"></script>
 
-<script src="js/cmxforms.js" type="text/javascript"></script>
 <script type="text/javascript">
 	// extend the current rules with new groovy ones
 	
