@@ -1,6 +1,8 @@
 1.?
 ---
-* Added Lithuanian (LT) localization 
+* Added Lithuanian (LT) localization
+* Added jQuery UI themerolled demo
+* Removed cmxform.js 
 
 1.6
 ---
